# spikenaut-router

./: AGENTS.md  Cargo.toml  README.md
src/: error.rs  lib.rs  mesh.rs  types.rs
src/delay/: mod.rs  ring_buffer.rs
src/topology/: generators.rs  graph.rs  mod.rs  wiring_rules.rs
