[package]
name = "synapse-router"
edition = "2024"
license = "GPL-3.0-or-later"
description = "SNN-based Anti-Hallucination Layer router: sparse keyword-to-domain routing via LIF neurons with STDP feedback for LLM output verification"
repository = "https://github.com/Limen-Neural/synapse-router"
keywords = ["snn", "neuromorphic", "routing", "lif", "spikenaut"]
categories = ["science", "algorithms", "text-processing"]
exclude = ["docs/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[workspace]
